welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: not found: value biscuits
while (2*biscuits!=casesOrange+1){
         ^